ANTLR/ModelParser.cs
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 Model.g 2016-03-02 10:13:52

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

using Antlr.Runtime.Tree;

namespace  Gekko 
{
public partial class ModelParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"LOG", 
		"EXP", 
		"FRML", 
		"AFTER", 
		"AFTER2", 
		"VAL", 
		"VARLIST", 
		"PLUS", 
		"MINUS", 
		"NEGATE", 
		"MULT", 
		"DIV", 
		"LB", 
		"RB", 
		"RP", 
		"DOT", 
		"TRUE", 
		"FALSE", 
		"ASTMODELBLOCK", 
		"ASTAFTER", 
		"ASTAFTER2", 
		"ASTASSIGNVAR", 
		"ASTINTEGER", 
		"ASTDOUBLE", 
		"ASTVARIABLE", 
		"ASTEXPRESSION", 
		"ASTFRMLCODE", 
		"ASTFUNCTION", 
		"ASTLAGFUNCTION", 
		"ASTLEFTSIDE", 
		"ASTSIMPLEFUNCTION", 
		"ASTVARIABLELAGLEAD", 
		"ASTLAGORLEAD", 
		"ASTFRML", 
		"ASTPOW", 
		"ASTVAL", 
		"ASTVARLIST", 
		"Modelblock", 
		"Double", 
		"Integer", 
		"Ident", 
		"MOD", 
		"AssignVar", 
		"STARS", 
		"HAT", 
		"DIGIT", 
		"Exponent", 
		"A", 
		"Q", 
		"M", 
		"DATE", 
		"LETTER", 
		"WHITESPACE", 
		"NEWLINE", 
		"NEWLINE2", 
		"NEWLINE3", 
		"Comment", 
		"NESTED_ML_COMMENT", 
		"B", 
		"C", 
		"D", 
		"E", 
		"F", 
		"G", 
		"H", 
		"I", 
		"J", 
		"K", 
		"L", 
		"N", 
		"O", 
		"P", 
		"R", 
		"S", 
		"T", 
		"U", 
		"V", 
		"W", 
		"X", 
		"Y", 
		"Z", 
		"'='", 
		"'('", 
		"','", 
		"'['", 
		"']'", 
		"'$'", 
		"';'"
    };

    public const int ASTPOW = 38;
    public const int ASTMODELBLOCK = 22;
    public const int ASTVARIABLE = 28;
    public const int MOD = 45;
    public const int LETTER = 55;
    public const int LOG = 4;
    public const int AFTER2 = 8;
    public const int EOF = -1;
    public const int ASTINTEGER = 26;
    public const int ASTASSIGNVAR = 25;
    public const int HAT = 48;
    public const int T__91 = 91;
    public const int T__90 = 90;
    public const int EXP = 5;
    public const int Comment = 60;
    public const int ASTVAL = 39;
    public const int VAL = 9;
    public const int Double = 42;
    public const int D = 64;
    public const int E = 65;
    public const int F = 66;
    public const int G = 67;
    public const int A = 51;
    public const int B = 62;
    public const int C = 63;
    public const int L = 72;
    public const int M = 53;
    public const int NESTED_ML_COMMENT = 61;
    public const int N = 73;
    public const int O = 74;
    public const int H = 68;
    public const int I = 69;
    public const int NEWLINE2 = 58;
    public const int J = 70;
    public const int NEWLINE3 = 59;
    public const int K = 71;
    public const int U = 79;
    public const int T = 78;
    public const int WHITESPACE = 56;
    public const int W = 81;
    public const int V = 80;
    public const int Q = 52;
    public const int P = 75;
    public const int ASTFRML = 37;
    public const int S = 77;
    public const int MULT = 14;
    public const int R = 76;
    public const int T__85 = 85;
    public const int T__87 = 87;
    public const int T__86 = 86;
    public const int T__89 = 89;
    public const int Y = 83;
    public const int T__88 = 88;
    public const int X = 82;
    public const int Z = 84;
    public const int ASTAFTER2 = 24;
    public const int Ident = 44;
    public const int ASTEXPRESSION = 29;
    public const int VARLIST = 10;
    public const int ASTLAGFUNCTION = 32;
    public const int ASTLAGORLEAD = 36;
    public const int FALSE = 21;
    public const int Modelblock = 41;
    public const int ASTSIMPLEFUNCTION = 34;
    public const int RB = 17;
    public const int RP = 18;
    public const int ASTVARIABLELAGLEAD = 35;
    public const int ASTFUNCTION = 31;
    public const int ASTAFTER = 23;
    public const int AssignVar = 46;
    public const int Exponent = 50;
    public const int ASTVARLIST = 40;
    public const int ASTFRMLCODE = 30;
    public const int PLUS = 11;
    public const int FRML = 6;
    public const int DIGIT = 49;
    public const int DOT = 19;
    public const int NEGATE = 13;
    public const int MINUS = 12;
    public const int AFTER = 7;
    public const int TRUE = 20;
    public const int ASTLEFTSIDE = 33;
    public const int NEWLINE = 57;
    public const int STARS = 47;
    public const int LB = 16;
    public const int ASTDOUBLE = 27;
    public const int DIV = 15;
    public const int DATE = 54;
    public const int Integer = 43;

    // delegates
    // delegators



        public ModelParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public ModelParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();
            this.state.ruleMemo = new Hashtable[68+1];
             
             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return ModelParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "Model.g"; }
    }


        private  System.Collections.Generic.List<string> errors = new  System.Collections.Generic.List<string>();
        private System.Collections.Generic.List<string> frmlItems = new System.Collections.Generic.List<string>();
        public override void DisplayRecognitionError(string[] tokenNames,
                                            RecognitionException e) {
            string hdr = GetErrorHeader(e);
            string msg = GetErrorMessage(e, tokenNames);
            errors.Add(e.Line + "¤" + e.CharPositionInLine + "¤" + hdr + "¤" + msg);
        }
        public  System.Collections.Generic.List<string> GetErrors() {
            return errors;
        }
        public System.Collections.Generic.List<string> GetFrmlItems() {
          return frmlItems;
        }    


    public class extraTokens_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "extraTokens"
    // Model.g:129:1: extraTokens : ( LOG | EXP | FRML | AFTER | AFTER2 | VAL | VARLIST );
    public ModelParser.extraTokens_return extraTokens() // throws RecognitionException [1]
    {   
        ModelParser.extraTokens_return retval = new ModelParser.extraTokens_return();
        retval.Start = input.LT(1);
        int extraTokens_StartIndex = input.Index();
        object root_0 = null;

        IToken set1 = null;

        object set1_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 1) ) 
    	    {
    	    	return retval; 
    	    }
            // Model.g:129:13: ( LOG | EXP | FRML | AFTER | AFTER2 | VAL | VARLIST )
            // Model.g:
            {
            	root_0 = (object)adaptor.GetNilNode();

            	set1 = (IToken)input.LT(1);
            	if ( (input.LA(1) >= LOG && input.LA(1) <= VARLIST) ) 
            	{
            	    input.Consume();
            	    if ( state.backtracking == 0 ) adaptor.AddChild(root_0, (object)adaptor.Create(set1));
            	    state.errorRecovery = false;state.failed = false;
            	}
            	else 
            	{
            	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            	    MismatchedSetException mse = new MismatchedSetException(null,input);
            	    throw mse;
            	}


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 1, extraTokens_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "extraTokens"

    public class expr_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "expr"
    // Model.g:143:1: expr : ( expr2 )+ EOF ;
    public ModelParser.expr_return expr() // throws RecognitionException [1]
    {   
        ModelParser.expr_return retval = new ModelParser.expr_return();
        retval.Start = input.LT(1);
        int expr_StartIndex = input.Index();
        object root_0 = null;

        IToken EOF3 = null;
        ModelParser.expr2_return expr22 = default(ModelParser.expr2_return);


        object EOF3_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 2) ) 
    	    {
    	    	return retval; 
    	    }
            // Model.g:143:6: ( ( expr2 )+ EOF )
            // Model.g:143:8: ( expr2 )+ EOF
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// Model.g:143:8: ( expr2 )+
            	int cnt1 = 0;
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( ((LA1_0 >= FRML && LA1_0 <= VAL) || LA1_0 == Modelblock || (LA1_0 >= 90 && LA1_0 <= 91)) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // Model.g:143:9: expr2
            			    {
            			    	PushFollow(FOLLOW_expr2_in_expr450);
            			    	expr22 = expr2();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, expr22.Tree);

            			    }
            			    break;

            			default:
            			    if ( cnt1 >= 1 ) goto loop1;
            			    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            		            EarlyExitException eee1 =
            		                new EarlyExitException(1, input);
            		            throw eee1;
            	    }
            	    cnt1++;
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements

            	EOF3=(IToken)Match(input,EOF,FOLLOW_EOF_in_expr454); if (state.failed) return retval;
            	if ( state.backtracking == 0 )
            	{EOF3_tree = (object)adaptor.Create(EOF3);
            		adaptor.AddChild(root_0, EOF3_tree);
            	}

            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 2, expr_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "expr"

    public class expr2_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "expr2"
    // Model.g:145:1: expr2 : ( frml | val | Modelblock -> ^( ASTMODELBLOCK Modelblock ) | AFTER frmlEnding -> ^( ASTAFTER ) | AFTER2 frmlEnding -> ^( ASTAFTER2 ) | frmlEnding ->);
    public ModelParser.expr2_return expr2() // throws RecognitionException [1]
    {   
        ModelParser.expr2_return retval = new ModelParser.expr2_return();
        retval.Start = input.LT(1);
        int expr2_StartIndex = input.Index();
        object root_0 = null;

        IToken Modelblock6 = null;
        IToken AFTER7 = null;
        IToken AFTER29 = null;
        ModelParser.frml_return frml4 = default(ModelParser.frml_return);

        ModelParser.val_return val5 = default(ModelParser.val_return);

        ModelParser.frmlEnding_return frmlEnding8 = default(ModelParser.frmlEnding_return);

        ModelParser.frmlEnding_return frmlEnding10 = default(ModelParser.frmlEnding_return);

        ModelParser.frmlEnding_return frmlEnding11 = default(ModelParser.frmlEnding_return);


        object Modelblock6_tree=null;
        object AFTER7_tree=null;
        object AFTER29_tree=null;
        RewriteRuleTokenStream stream_AFTER2 = new RewriteRuleTokenStream(adaptor,"token AFTER2");
        RewriteRuleTokenStream stream_AFTER = new RewriteRuleTokenStream(adaptor,"token AFTER");
        RewriteRuleTokenStream stream_Modelblock = new RewriteRuleTokenStream(adaptor,"token Modelblock");
        RewriteRuleSubtreeStream stream_frmlEnding = new RewriteRuleSubtreeStream(adaptor,"rule frmlEnding");
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 3) ) 
    	    {
    	    	return retval; 
    	    }
            // Model.g:145:10: ( frml | val | Modelblock -> ^( ASTMODELBLOCK Modelblock ) | AFTER frmlEnding -> ^( ASTAFTER ) | AFTER2 frmlEnding -> ^( ASTAFTER2 ) | frmlEnding ->)
            int alt2 = 6;
            switch ( input.LA(1) ) 
            {
            case FRML:
            	{
                alt2 = 1;
                }
                break;
            case VAL:
            	{
                alt2 = 2;
                }
                break;
            case Modelblock:
            	{
                alt2 = 3;
                }
                break;
            case AFTER:
            	{
                alt2 = 4;
                }
                break;
            case AFTER2:
            	{
                alt2 = 5;
                }
                break;
            case 90:
            case 91:
            	{
                alt2 = 6;
                }
                break;
            	default:
            	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            	    NoViableAltException nvae_d2s0 =
            	        new NoViableAltException("", 2, 0, input);

            	    throw nvae_d2s0;
            }

            switch (alt2) 
            {
                case 1 :
                    // Model.g:146:3: frml
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_frml_in_expr2474);
                    	frml4 = frml();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, frml4.Tree);

                    }
                    break;
                case 2 :
                    // Model.g:147:5: val
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_val_in_expr2480);
                    	val5 = val();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, val5.Tree);

                    }
                    break;
                case 3 :
                    // Model.g:148:5: Modelblock
                    {
                    	Modelblock6=(IToken)Match(input,Modelblock,FOLLOW_Modelblock_in_expr2486); if (state.failed) return retval; 
                    	if ( (state.backtracking==0) ) stream_Modelblock.Add(Modelblock6);



                    	// AST REWRITE
                    	// elements:          Modelblock
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	if ( (state.backtracking==0) ) {
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 148:16: -> ^( ASTMODELBLOCK Modelblock )
                    	{
                    	    // Model.g:148:19: ^( ASTMODELBLOCK Modelblock )
                    	    {
                    	    object root_1 = (object)adaptor.GetNilNode();
                    	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ASTMODELBLOCK, "ASTMODELBLOCK"), root_1);

                    	    adaptor.AddChild(root_1, stream_Modelblock.NextNode());

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;}
                    }
                    break;
                case 4 :
                    // Model.g:149:5: AFTER frmlEnding
                    {
                    	AFTER7=(IToken)Match(input,AFTER,FOLLOW_AFTER_in_expr2500); if (state.failed) return retval; 
                    	if ( (state.backtracking==0) ) stream_AFTER.Add(AFTER7);

                    	PushFollow(FOLLOW_frmlEnding_in_expr2502);
                    	frmlEnding8 = frmlEnding();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( (state.backtracking==0) ) stream_frmlEnding.Add(frmlEnding8.Tree);


                    	// AST REWRITE
                    	// elements:          
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	if ( (state.backtracking==0) ) {
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 149:22: -> ^( ASTAFTER )
                    	{
                    	    // Model.g:149:26: ^( ASTAFTER )
                    	    {
                    	    object root_1 = (object)adaptor.GetNilNode();
                    	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ASTAFTER, "ASTAFTER"), root_1);

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;}
                    }
                    break;
                case 5 :
                    // Model.g:150:5: AFTER2 frmlEnding
                    {
                    	AFTER29=(IToken)Match(input,AFTER2,FOLLOW_AFTER2_in_expr2515); if (state.failed) return retval; 
                    	if ( (state.backtracking==0) ) stream_AFTER2.Add(AFTER29);

                    	PushFollow(FOLLOW_frmlEnding_in_expr2517);
                    	frmlEnding10 = frmlEnding();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( (state.backtracking==0) ) stream_frmlEnding.Add(frmlEnding10.Tree);


                    	// AST REWRITE
                    	// elements:          
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	if ( (state.backtracking==0) ) {
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 150:23: -> ^( ASTAFTER2 )
                    	{
                    	    // Model.g:150:27: ^( ASTAFTER2 )
                    	    {
                    	    object root_1 = (object)adaptor.GetNilNode();
                    	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ASTAFTER2, "ASTAFTER2"), root_1);

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;}
                    }
                    break;
                case 6 :
                    // Model.g:151:5: frmlEnding
                    {
                    	PushFollow(FOLLOW_frmlEnding_in_expr2532);
                    	frmlEnding11 = frmlEnding();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( (state.backtracking==0) ) stream_frmlEnding.Add(frmlEnding11.Tree);


                    	// AST REWRITE
                    	// elements:          
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	if ( (state.backtracking==0) ) {
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 151:16: ->
                    	{
                    	    root_0 = null;
                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;}
                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 3, expr2_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "expr2"

    public class frml_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "frml"
    // Model.g:154:1: frml : FRML code genrLeftSide '=' expression2 frmlEnding -> ^( ASTFRML code genrLeftSide expression2 ) ;
    public ModelParser.frml_return frml() // throws RecognitionException [1]
    {   
        ModelParser.frml_return retval = new ModelParser.frml_return();
        retval.Start = input.LT(1);
        int frml_StartIndex = input.Index();
        object root_0 = null;

        IToken FRML12 = null;
        IToken char_literal15 = null;
        ModelParser.code_return code13 = default(ModelParser.code_return);

        ModelParser.genrLeftSide_return genrLeftSide14 = default(ModelParser.genrLeftSide_return);

        ModelParser.expression2_return expression216 = default(ModelParser.expression2_return);

        ModelParser.frmlEnding_return frmlEnding17 = default(ModelParser.frmlEnding_return);

